src/test/ui/const-generics/nested-type.min.stderr
error: `[u8; _]` is forbidden as the type of a const generic parameter
  --> $DIR/nested-type.rs:7:21
   |
LL |   struct Foo<const N: [u8; {
   |  _____________________^
LL | |     struct Foo<const N: usize>;
LL | |
LL | |     impl<const N: usize> Foo<N> {
...  |
LL | |
LL | | }]>;
   | |__^
   |
   = note: the only supported types are integers, `bool` and `char`
   = note: more complex types are supported with `#[feature(const_generics)]`

error[E0015]: calls in constants are limited to constant functions, tuple structs and tuple variants
  --> $DIR/nested-type.rs:16:5
   |
LL |     Foo::<17>::value()
   |     ^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0015`.
